@@ -1,4 +1,5 @@
 0.05
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.04 2022-09-09T18:15:21+02:00
